manifests/gpu-resource-toleration-admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpu-resource-toleration-admission-controller
  namespace: kube-system
  labels:
    app: gpu-resource-toleration-admission-controller
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8443
  selector:
    app: gpu-resource-toleration-admission-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-resource-toleration-admission-controller
  namespace: kube-system
  labels:
    app: gpu-resource-toleration-admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpu-resource-toleration-admission-controller
  template:
    metadata:
      name: gpu-resource-toleration-admission-controller
      labels:
        app: gpu-resource-toleration-admission-controller
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - gpu-resource-toleration-admission-controller
            topologyKey: kubernetes.io/hostname
      containers:
      - name: webhook
        image: gpu-resource-toleration-admission-controller:%IMAGE_VERSION% # make sure to build and tag the image first!
        args:
        - -tlsCertFile=/etc/webhook/certs/cert.pem
        - -tlsKeyFile=/etc/webhook/certs/key.pem
        - -targetResource=nvidia.com/gpu
        volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
        securityContext:
          readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: gpu-resource-toleration-admission-controller-webhook-certs
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: gpu-resource-toleration-admission-controller
  labels:
    app: gpu-resource-toleration-admission-controller
webhooks:
- name: gpu-resource-toleration-admission-controller.kube-system.svc
  objectSelector:
    matchLabels:
      app: "gpu-resource-toleration-admission-controller"
  clientConfig:
    service:
      name: gpu-resource-toleration-admission-controller
      namespace: kube-system
      path: "/mutate"
    caBundle: <CA_BUNDLE>
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
